--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -174,6 +174,7 @@
     <com.android.keyguard.AlphaOptimizedLinearLayout
         android:id="@+id/centered_area"
         android:gravity="center"
+        android:layout_gravity="center"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -185,6 +186,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:gravity="center"
+            android:layout_gravity="center"
             android:visibility="gone"
             systemui:isStatusBar="true"
         />
