SystemUI: Separate chip and volume styles gradient colors
Change-Id: I1cddf640bf0438aafc7c893ef375925030809749
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -274,4 +274,6 @@
     <color name="shadow">#14000000</color>
     <color name="neumorph_outline_start">#FFBDBDBD</color>
     <color name="neumorph_outline_end">#FFF0F0F0</color>
+    <color name="holo_blue_light_chip">@android:color/system_accent1_600</color>
+    <color name="holo_green_light_chip">@android:color/system_accent3_600</color>
 </resources>
