--- a/packages/SystemUI/res/values-night/qsthemes_colors.xml
+++ b/packages/SystemUI/res/values-night/qsthemes_colors.xml
@@ -1,4 +1,6 @@
 <resources>    
      <color name="qs_translucent_bg">#0FFFFFFF</color>
     <color name="qs_white_bg">@android:color/system_neutral1_0</color>
+    <color name="volume_bg_color">@android:color/system_accent1_100</color>
+    <color name="volume_shape_color">#80000000</color>
 </resources>
