--- a/packages/SystemUI/res/values/qsthemes_colors.xml
+++ b/packages/SystemUI/res/values/qsthemes_colors.xml
@@ -2,4 +2,6 @@
     <color name="qs_ripple_color">@android:color/system_accent1_400</color>
     <color name="qs_translucent_bg">#59FFFFFF</color>
     <color name="qs_white_bg">@android:color/system_neutral1_0</color>
+    <color name="volume_bg_color">#80626161</color>
+    <color name="volume_shape_color">@android:color/system_accent1_600</color>
 </resources>
